# djangojokes

./: .30yt7pze5u8tp3695771469~  db.sqlite3  pyproject.toml  replit_zip_error_log.txt
.upm/: store.json
django_project/: settings.py  urls.py
jokes/: models.py  urls.py  views.py
jokes/migrations/: 0001_initial.py
pages/: urls.py  views.py
starter-code/: _base.html
templates/: _base.html
templates/jokes/: joke_detail.html  joke_list.html
