[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
django-allauth = "^0.51.0"
django-arcutils = "^2.24.0"
django-storages = "^1.13.1"
validators = "^0.20.0"
[tool.poetry.dev-dependencies]
